--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "compilerOptions": {
-    "lib": ["es2020"],
+    "lib": [
+      "es2019"
+    ],
     "module": "commonjs",
-    "target": "es2020",
+    "target": "es2019",
     "outDir": "out",
     "sourceMap": true,
     "strictNullChecks": true
